tests/data-clumps/test-cases/field-field/always-class/positive/typescript/source/ContactInfo.ts
export class ContactInfo {
  constructor(public email: string, public phone: string) {}
}
