tests/data-clumps/test-cases/field-field/always-class/negative/typescript/source/EmergencyContact.ts
export class EmergencyContact {
  constructor(public name: string, public phone: string) {}
}
